--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.5",
+    "@splinetool/runtime": "^0.9.202",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-smooth-scrollbar": "^8.0.6",
+    "smooth-scrollbar": "^8.8.1",
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
